[metadata]
name = unet
version = 0.0.1
url = https://github.com/jonaslalin/unet-from-scratch.git
author = Jonas Lalin
author_email = "Jonas Lalin" <1ac6df24@gmail.com>
description = A U-Net implementation for TensorFlow.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    =src
install_requires =
    tensorflow>=2.8,<3; platform_system!='Darwin' or platform_machine!='arm64'
    tensorflow-macos>=2.8,<3; platform_system=='Darwin' and platform_machine=='arm64'

[options.packages.find]
where = src
